Fixed spacing

--- a/styles/contact.css
+++ b/styles/contact.css
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 0.25rem;
+  gap: 0.5rem;
 }
 
 #contact-container h1 {
@@ -47,7 +47,7 @@
 }
 
 #contact-container button {
-  margin-top: 0.5rem;
+  margin-top: 1rem;
   margin-bottom: 3rem;
   border-radius: 35px;
 }
